small bug with section spacing "fixed"

--- a/src/components/About_Us/FromTheCEO.css
+++ b/src/components/About_Us/FromTheCEO.css
@@ -5,22 +5,28 @@
     opacity: .6;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
 }
-/* Smartphones (portrait and landscape) ----------- */
+
+.aboutUs-sections {
+    padding-top: 65px;
+}
+
+/* Smartphones (portrait and landscape) -----------
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     .aboutUs-sections {
         padding-top: 35px;
     }
 }
 
-@media only screen and (min-device-width: 481px) and (max-device-width : 1823px) {
+/* Between the gaps -------------------------------- */
+/* @media only screen and (min-device-width: 481px) and (max-device-width : 1823px) {
     .aboutUs-sections {
         padding-top: 65px;
     }
-}
+} */
 
 /* Large screens ----------- */
-@media only screen  and (min-width : 1824px) {
+/* @media only screen  and (min-width : 1824px) {
     .aboutUs-sections {
         padding-top: 65px; 
     }
-}
+} */
